# LibTest

./: CMakeLists.txt  Jenkinsfile
CMake/: Functions.cmake  mocRequired  pointerSize.c
lib/src/: TestObject.cpp  TestObject.h  TestObject_p.h
main/src/: main.cpp
test/FirstTest/: main.cpp
